--- a/src/geopd/templates/users/profile.html
+++ b/src/geopd/templates/users/profile.html
@@ -19,6 +19,8 @@
 
                 <hr/>
 
+                <div id="profile-message"></div>
+
                 <ul class="nav nav-tabs">
                     <li class="active"><a data-toggle="tab" href="#biography-pane">Biography</a></li>
                     {% if user.id == current_user.id %}
