--- a/src/geopd/templates/users/profile/biography.html
+++ b/src/geopd/templates/users/profile/biography.html
@@ -1,16 +1,13 @@
 <h3 class="page-header text-primary">Research Interests</h3>
-<p class="edit edit-biography" id="interest">
-    {%- if user.bio.research_interests -%}
-        {{ user.bio.research_interests }}
-    {%- elif current_user.id != user.id -%}
-        No research interests provided.
-    {%- endif -%}
-</p>
+<div class="edit-biography">
+    <p id="interest">
+        {{ user.bio.research_interests|md2html|safe if user.bio.research_interests else 'Double click to edit.' }}
+    </p>
+</div>
+
 <h3 class="page-header text-primary">Research Experience</h3>
-<p class="edit edit-biography" id="experience">
-    {%- if user.bio.research_experience -%}
-        {{ user.bio.research_experience }}
-    {%- elif current_user.id != user.id -%}
-        No research experience provided.
-    {%- endif -%}
-</p>
+<div class="edit-biography">
+    <p id="experience">
+        {{ user.bio.research_experience|md2html|safe if user.bio.research_experience else 'Double click to edit.' }}
+    </p>
+</div>
