--- a/src/geopd/templates/users/profile/survey.html
+++ b/src/geopd/templates/users/profile/survey.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-12">
         <p class="help-block">
-            Please complete the following survey.
+            Do you have the following?
         </p>
     </div>
 </div>
