--- a/src/geopd/templates/users/profile.html
+++ b/src/geopd/templates/users/profile.html
@@ -37,6 +37,13 @@
 
                     {% if user.id == current_user.id %}
                         <div id="address-pane" class="tab-pane fade">
+
+                            <p class="help-block">
+                                <span class="glyphicon glyphicon-question-sign"></span>
+                                Use the following form to add or change your institution name, department, and address.
+                                Start by typing the institution name, then choose from the dropdown menu.
+                            </p>
+
                             <form action="{{ url_for('web.update_user_address', id=current_user.id) }}"
                                   method="post" data-toggle="validator">
                                 {{ address_form.csrf_token }}
