--- a/src/geopd/templates/users/profile/scripts.html
+++ b/src/geopd/templates/users/profile/scripts.html
@@ -67,7 +67,7 @@
             var close = '<a href="#" class="close" data-dismiss="alert">&times</a>';
 
             $('.edit-biography').dblclick(function () {
-                $(this).find('p.markdown').markdown({
+                $(this).find('div.markdown').markdown({
                     hideable: true,
                     height: 300,
                     onBlur: function (e) {
