--- a/src/geopd/templates/users/index.html
+++ b/src/geopd/templates/users/index.html
@@ -83,7 +83,7 @@
                 marker{{ loop.index }}.addListener('click', function () {
                     new google.maps.InfoWindow({
                         content: create_info_window_html({
-                            profile: '{{ url_for("web.show_user", id=user.id) }}',
+                            profile: '{{ url_for("web.show_user", user_id=user.id) }}',
                             name: '{{ user.name }}',
                             email: '{{ user.email }}',
                             institution: '{{ user.address.institution }}',
@@ -98,7 +98,7 @@
         var users = [];
         {% for user in users %}
             users.push({
-                profile: '{{ url_for('web.show_user', id=user.id) }}',
+                profile: '{{ url_for('web.show_user', user_id=user.id) }}',
                 last_name: '{{ user.last_name }}',
                 given_names: '{{ user.given_names }}',
                 institution: {% if user.address.institution %}'{{ user.address.institution }}'{% else %}undefined{% endif %},
@@ -149,6 +149,6 @@
             });
         });
     </script>
-    <script src="{{ geopd.get('google.api', 'map_url') }}?key={{ geopd.get('google.api', 'key') }}&libraries=places&callback=initMap"
+    <script src="{{ config.GOOGLE_API_MAP_URL }}?key={{ config.GOOGLE_API_KEY }}&libraries=places&callback=initMap"
         async defer></script>
 {% endblock %}
