--- a/src/geopd/templates/cores/index.html
+++ b/src/geopd/templates/cores/index.html
@@ -40,7 +40,7 @@
                 <p class="text-muted">Core Leaders:
                     {% for user in core.leaders %}
                         {% if current_user.is_authenticated %}
-                            <a href="{{ url_for('web.show_user', id=user.id) }}">{{ user.name }}</a>
+                            <a href="{{ url_for('web.show_user', user_id=user.id) }}">{{ user.name }}</a>
                         {% else %}
                             {{ user.name }}
                         {% endif %}
