--- a/src/geopd/templates/navbar.html
+++ b/src/geopd/templates/navbar.html
@@ -17,7 +17,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" href="/">
-                <img alt="{{ config.APP_BRAND }}" src="{{ url_for('static', filename='images/brand.png') }}"
+                <img alt="{{ config.APP_BRAND }}" src="{{ url_for('web.static', filename='images/brand.png') }}"
                      title="{{ config.APP_NAME }}">
             </a>
         </div>
