using web.static instead of static for images

--- a/src/geopd/templates/promo/luxembourg.html
+++ b/src/geopd/templates/promo/luxembourg.html
@@ -1,5 +1,5 @@
 <div class="thumbnail">
-    <img src="{{ url_for('static', filename='images/luxembourg.jpg') }}" alt="Luxembourg 2016">
+    <img src="{{ url_for('web.static', filename='images/luxembourg.jpg') }}" alt="Luxembourg 2016">
     <div class="caption text-center">
         <h3>Luxembourg 2016</h3>
         <p>11th Annual Meeting<br/>
