--- a/src/geopd/templates/promo/tokyo.html
+++ b/src/geopd/templates/promo/tokyo.html
@@ -11,7 +11,7 @@
             </div>
         </div>
         <div class="col-md-6">
-            <img class="img-responsive" src="{{ url_for('static', filename='images/tokyo.jpg') }}" alt="Tokyo 2015">
+            <img class="img-responsive" src="{{ url_for('web.static', filename='images/tokyo.jpg') }}" alt="Tokyo 2015">
         </div>
     </div>
 </div>
