using nameparser for user names

--- a/src/geopd/templates/users/profile.html
+++ b/src/geopd/templates/users/profile.html
@@ -7,7 +7,7 @@
             <div class="col-md-8 col-md-offset-2">
                 <ol class="breadcrumb">
                     <li><a href="{{ url_for('web.show_users') }}">Members</a></li>
-                    <li>{{ user.name }}</li>
+                    <li>{{ user.name.full }}</li>
                 </ol>
             </div>
         </div>
