--- a/src/geopd/templates/cores/leaders.html
+++ b/src/geopd/templates/cores/leaders.html
@@ -4,9 +4,9 @@
         <p class="text-muted">Core Leaders:
             {% for user in core.leaders %}
                 {% if current_user.is_authenticated %}
-                    <a href="{{ url_for('web.show_user', user_id=user.id) }}">{{ user.name }}</a>
+                    <a href="{{ url_for('web.show_user', user_id=user.id) }}">{{ user.name.full }}</a>
                 {% else %}
-                    {{ user.name }}
+                    {{ user.name.full }}
                 {% endif %}
                 {%- if not loop.last -%},{%- endif -%}
             {% endfor %}
