--- a/src/geopd/templates/projects.html
+++ b/src/geopd/templates/projects.html
@@ -12,7 +12,9 @@
                         <div>
                             <h3 class="text-primary">{{ project.name }}</h3>
                             <p class="text-muted">
-                                <em>{{ project.investigators | join(', ') }}</em>
+                                {% for user in project.investigators %}
+                                    <em>{{ user.name.full }}</em>{% if not loop.last %}, {% endif %}
+                                {% endfor %}
                             </p>
                             <p>{{ project.description }}</p>
                         </div>
