--- a/src/geopd/templates/users/index.html
+++ b/src/geopd/templates/users/index.html
@@ -77,14 +77,14 @@
                 var marker{{ loop.index }} = new google.maps.Marker({
                     position: {lat: {{ user.address.latitude }}, lng: {{ user.address.longitude }}},
                     map: map,
-                    title: '{{ user.name }}',
+                    title: '{{ user.name.formal }}',
                 });
 
                 marker{{ loop.index }}.addListener('click', function () {
                     new google.maps.InfoWindow({
                         content: create_info_window_html({
                             profile: '{{ url_for("web.show_user", user_id=user.id) }}',
-                            name: '{{ user.name }}',
+                            name: '{{ user.name.formal }}',
                             email: '{{ user.email }}',
                             institution: '{{ user.address.institution }}',
                             address: '{{ user.address.long }}',
