--- a/src/geopd/templates/cores/index.html
+++ b/src/geopd/templates/cores/index.html
@@ -79,9 +79,10 @@
         $(document).ready(function () {
 
             var url = URI('/api/core-posts/');
-            url.addQuery('include', 'author');
+            url.addQuery('include', 'author,author.name');
             url.addQuery('fields[core-posts]', 'title,created-on,updated-on,author');
-            url.addQuery('fields[users]', 'formal-name');
+            url.addQuery('fields[users]', 'name');
+            url.addQuery('fields[user-names]', 'formal');
             url.addQuery('filter[core.id.eq]', {{ core.id }});
 
             $.getJSON(url.readable(), function (json) {
@@ -96,7 +97,7 @@
                         },
                         {
                             data: function (post) {
-                                return post.author.formal_name;
+                                return post.author.name.formal;
                             }
                         },
                         {
